[프로젝트_네비UI완성_모바일] Step 1 정말정말 최종: 타이틀 하단 여백(+5px) 및 사각형 높이(+4px) 추가 완료

--- a/index.html
+++ b/index.html
@@ -9543,7 +9543,8 @@
 
                 #naviStep1 h2 {
                     margin-top: 2px !important;
-                    margin-bottom: 2px !important;
+                    margin-bottom: 7px !important;
+                    /* +5px additional space */
                     font-size: 16.5px !important;
                     opacity: 0.9 !important;
                 }
@@ -9561,7 +9562,8 @@
                     padding: 4px 2px 7px 2px;
                     /* Bottom padding slightly increased */
                     box-sizing: border-box;
-                    min-height: 133px !important;
+                    min-height: 137px !important;
+                    /* +4px additional height */
                     /* Ultimate reduced height */
                 }
 
