[프로젝트_네비UI완성_모바일] Step 1 진짜진짜 최종: 헤더 높이(+2px), 타이틀 크기(1.2x) 및 여백(+5px) 반영 완료

--- a/index.html
+++ b/index.html
@@ -9523,7 +9523,8 @@
                 }
 
                 .admin-header {
-                    padding: 8px 20px !important;
+                    padding: 9px 20px !important;
+                    /* +1px top/bottom = +2px total height */
                 }
 
                 /* 2. Global Scaling & Body Compression */
@@ -9543,9 +9544,10 @@
 
                 #naviStep1 h2 {
                     margin-top: 2px !important;
-                    margin-bottom: 7px !important;
-                    /* +5px additional space */
-                    font-size: 16.5px !important;
+                    margin-bottom: 12px !important;
+                    /* Total +10px from original (5px additional) */
+                    font-size: 19.8px !important;
+                    /* 1.2x of current 16.5px */
                     opacity: 0.9 !important;
                 }
 
