Step 2 Mobile UI: Title 1.2x, Capsule Height 1.1x, and spacing adjustments

--- a/index.html
+++ b/index.html
@@ -9648,14 +9648,16 @@
                 #naviStep2 h2 {
                     margin-top: 2px !important;
                     margin-bottom: 3px !important;
-                    font-size: 15.3px !important;
-                    /* 65% of 23.5px */
+                    font-size: 18.4px !important;
+                    /* 1.2x of previous 15.3px */
                     opacity: 0.9 !important;
                     letter-spacing: -1px !important;
                 }
 
                 #naviStep2 .battle-theme-text {
-                    margin: 8px 0 !important;
+                    margin-top: 8px !important;
+                    margin-bottom: 6px !important;
+                    /* [요청] 문장 아래쪽 6px 공백 추가 */
                     font-size: 15px !important;
                     /* 65% of 23px approx */
                 }
@@ -9663,6 +9665,8 @@
                 #naviStep2 .battle-theme-text span {
                     font-size: 12.6px !important;
                     /* 85% of 14.8px approx */
+                    display: inline-block;
+                    margin-bottom: 6px;
                 }
 
                 .capsule-container {
@@ -9674,8 +9678,8 @@
                 .capsule-glass {
                     width: 52.8px !important;
                     /* 60% of 88px */
-                    height: 86.4px !important;
-                    /* 60% of 144px */
+                    height: 95px !important;
+                    /* [요청] 세로 사이즈 1.1배 (86.4px -> 95px) */
                     border-radius: 26px !important;
                     padding-top: 12px !important;
                 }
