Step 2 Mobile UI Refinement: Header height +3px, subtext spacing +4px, capsule width 1.1x

--- a/index.html
+++ b/index.html
@@ -9525,8 +9525,8 @@
                 }
 
                 .admin-header {
-                    padding: 9px 20px !important;
-                    /* +1px top/bottom = +2px total height */
+                    padding: 10.5px 20px !important;
+                    /* [요청] Header 길이(높이) 3px 연장 (기존 9px -> 10.5px 시 +3px 효과) */
                 }
 
                 /* 2. Global Scaling & Body Compression */
@@ -9666,7 +9666,8 @@
                     font-size: 12.6px !important;
                     /* 85% of 14.8px approx */
                     display: inline-block;
-                    margin-bottom: 6px;
+                    margin-bottom: 10px;
+                    /* [요청] 추가 4px 공백 반영 (기존 6px -> 10px) */
                 }
 
                 .capsule-container {
@@ -9676,8 +9677,8 @@
                 }
 
                 .capsule-glass {
-                    width: 52.8px !important;
-                    /* 60% of 88px */
+                    width: 58.1px !important;
+                    /* [요청] 가로 사이즈 1.1배 확대 (52.8px -> 58.1px) */
                     height: 95px !important;
                     /* [요청] 세로 사이즈 1.1배 (86.4px -> 95px) */
                     border-radius: 26px !important;
