Step 3 Mobile UI Refinement: Gauge labels and sum text scaled to 90%

--- a/index.html
+++ b/index.html
@@ -9766,6 +9766,12 @@
                     margin-top: 24px !important;
                 }
 
+                /* [요청] 게이지 라벨 및 합계 텍스트 90% 축소 (11px -> 9.9px) */
+                .gauge-label,
+                #gaugeSumValue {
+                    font-size: 9.9px !important;
+                }
+
                 /* [요청] Step 3 결과 공 80% 축소 (38px -> 30px) */
                 .rotating-ball {
                     width: 30px !important;
