Step 3 Mobile UI Refinement: Title font size (90%) and bottom margin (2/3) adjustments

--- a/index.html
+++ b/index.html
@@ -9706,10 +9706,10 @@
                 /* Step 3: Balance Scale (Odd/Even) Optimization */
                 #naviStep3 h2 {
                     margin-top: 2px !important;
-                    margin-bottom: 13px !important;
-                    /* [요청] 5px 추가 (8px -> 13px) */
-                    font-size: 18.2px !important;
-                    /* 1.2x of 15.2px */
+                    margin-bottom: 8.7px !important;
+                    /* [요청] 현재의 2/3 수준 (13px * 2/3) */
+                    font-size: 16.4px !important;
+                    /* [요청] 현재의 90% (18.2px * 0.9) */
                     opacity: 0.9 !important;
                     letter-spacing: -1px !important;
                 }
