Step 4 Mobile UI Refinement: 1.2x ball size, 1.3x capsule height, and hidden candidate grid

--- a/index.html
+++ b/index.html
@@ -9846,12 +9846,12 @@
                     width: 90% !important;
                 }
 
-                /* [요청] 박스 내부 원형 숫자 50% 축소 (32px -> 16px) */
+                /* [요청] 박스 내부 원형 숫자 1.2배 상향 (16px -> 19.2px) */
                 .fixed-num-tag,
                 .fixed-num-empty {
-                    width: 16px !important;
-                    height: 16px !important;
-                    font-size: 8px !important;
+                    width: 19.2px !important;
+                    height: 19.2px !important;
+                    font-size: 9.6px !important;
                     margin: 0 2px !important;
                     border-width: 1px !important;
                 }
@@ -9872,10 +9872,10 @@
                     letter-spacing: 1px !important;
                 }
 
-                /* [요청] 3가지 캡슐 가로길이 60% 축소 (100px -> 60px) */
+                /* [요청] 3가지 캡슐 가로길이 60% 축소 (100px -> 60px) / 높이 1.3배 확대 (75px -> 97.5px) */
                 .reg-card-3d {
                     width: 60px !important;
-                    height: 75px !important;
+                    height: 97.5px !important;
                 }
 
                 .reg-card-3d .bell-jar {
@@ -9895,6 +9895,11 @@
 
                 #fingerPointerWrap {
                     height: 35px !important;
+                }
+
+                /* [요청] 손가락 아래 원숫자 2행(후보군) 삭제 */
+                .candidate-grid {
+                    display: none !important;
                 }
             }
 
